syntax = "proto3";
package konstellation.oracle;

import "konstellation/oracle/tx.proto";

option go_package = "x/oracle/types";

message GenesisState {
  repeated AdminAddr allowed_addresses = 1;
}
